name:                yesod-table
version:             2.0.0
synopsis:            HTML tables for Yesod
description:         HTML tables for Yesod
license:             MIT
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
homepage:            https://github.com/andrewthad/yesod-table
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base         >= 4.3 && <= 5.0
                     , yesod-core   >= 1.2
                     , containers   >= 0.3.0.0
                     , contravariant   >= 1.0
                     , text         >= 1.0
                     , bytestring   >= 0.9
                     , shakespeare  >= 2.0
                     , blaze-markup
  exposed-modules:     Yesod.Table
  default-extensions:  QuasiQuotes
                     , GeneralizedNewtypeDeriving
  hs-source-dirs:      src
  default-language:    Haskell2010

executable example-exe
  default-language: Haskell2010
  main-is: main.hs
  hs-source-dirs: example
  build-depends: base, yesod-table, text, yesod-core >= 1.2, contravariant, warp
